--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -9,22 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/python-2.7.6/lib/python2.7/site-packages/matplotlib-1.5.1-py2.7-linux-x86_64.egg/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/usr/local/python-2.7.6/lib/python2.7/site-packages/matplotlib-1.5.1-py2.7-linux-x86_64.egg/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
-      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -69,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "key = '2016-04-24'\n",
-    "name = 'anm-0330549-6'"
+    "key = '2016-05-15'\n",
+    "name = '5001-L23'"
    ]
   },
   {
@@ -88,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -146,9 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -174,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3482\n"
+      "5525\n"
      ]
     }
    ],
@@ -202,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'numberAcquisitions': 1, 'totalFrames': 3482, 'numberVolumes': 3482, 'framesPerVolume': 1}\n"
+      "{'numberAcquisitions': 1, 'totalFrames': 5525, 'numberVolumes': 5525, 'framesPerVolume': 1}\n"
      ]
     }
    ],
@@ -324,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -405,16 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD5ZJREFUeJzt3X2MZfVZwPHvlGGhsgWy27IrLXUrNU8rIAulRWrTBrdK\no3R9Cak1hnZpYeIaTGGWsrSh2UqNoKyrIoZCpFRT38AmBZrU6LaEmqbGly4RBJ6is1WWYZmyG17U\nCgxc/zhnYFxnd+/uzJln7sz3k0z2zLlzz/lxmNzv/M6cOXeo1+shSVKFV1UPQJK0dBkhSVIZIyRJ\nKmOEJElljJAkqYwRkiSVGe5qwxFxLHAVcFZm/uS09R8GfhRYBnwhM+/pagySpIWty5nQMHDtDOsv\nzMyNwEbg8g73L0la4DqLUGbuzcxnZ3jopfbx52lmQ5KkJaqz03HTDM20MiKOBp47lA1FxDDwBmBX\nZk7OwdgkSYWGurptT0ScDVzQftwBrMjMiyPiF4H30MyCbs3Mb+zn+SPAyD6rlwGnja0fY3K5DZIk\ngN6W0tuvzTjR6PvJg3TvuIhYA+w0QpL0ikGOkJdoS5LKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUx\nQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMk\nSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSoz\n3MVGI2ItcAUwAezKzG3t+lHgOOBE4E8z854u9i9JGgxdzYQ2AaOZOQqcGxFTsXt3Zm4Bfh84v6N9\nS5IGRCczIWBVZk60y3uBFTSzou0RcRvNTOjqjvYtSRoQXc2ExiNidbu8EtjTLp+XmRcBF2CEJGnJ\n62omtBW4PiL2AF8BbgJGgH+OiGuA44G/ONAGImKkfc50yzoYqySpyFCv16seQ98iYg2wc2z9GJPL\nJ6uHI0kLQm9L6ev40Gye7CXakqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpj\nhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZI\nklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoMd7XhiFgLXAFMALsy\nc1u7/qeB9wJHArdm5o6uxiBJWti6nAltAkYzcxQ4NyKmgjdCE6bngCc63L8kaYHrMkKrMnOiXd4L\nrGiXTwGuA7YBV3e4f0nSAtdlhMYjYnW7vBLY0y5/NzN7wDPAUR3uX5K0wHX2OyFgK3B9ROwBvgLc\nRHMq7saIuK39mt/b35MjYqT9+umWdTFQSVKNoV6vVz2GvkXEGmDn2PoxJpdPVg9HkhaE3pbS1/Gh\n2TzZS7QlSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJEllDnrbnojYDHwJOAe4\nBLg3Mz/Z9cAkSYtfPzOht2ZmAh8C3gW8vtshSZKWin4idExEvBd4sL379bEdj0mStET0E6FbgPcD\nn4mIc4C7uh2SJGmp6OetHM7LzI+1y08A3+xwPJKkJaSfCL0pIq4HHp1akZk3dDckSdJS0U+EPP0m\nSepEP78TugtYBZwE3A38XacjkiQtGf1E6Fbg34BTgJeA6zsdkSRpyegnQk9n5heB72XmU8CTHY9J\nkrRE9BOhoyLiSmBNRPwqcHTHY5IkLRH9RGgD8DjwVWBv+7kkSbPWz9Vx17X/DgErgTMjYi9wW2aO\ndzYySdKi19dte4Dv0FwZNwYsB75Nc8GCJEmHrZ8IvSozb8jMr2XmjcCLmXkHMNHx2CRJi1w/p+NW\nR8RWmjsmnAicHBHvBF7d6cgkSYtePxH6OeA9wGrgYeBTNL8f+mCH45IkLQH9ROj29t8hoAeM0Fwl\ndwNwf0fjkiQtAf1EaAz4OvAA8MM0s6Lbae6c8L7uhiZJWuz6idDrMnPqJqZjEfEzmfkPEbGny4FJ\nkha/fiLUi4i/5JULE4YiYh3wVKcjkyQtegeNUGZuiIiTaS5MeDIzs33oq52OTJK06O3374Qi4vPt\nvzuAO4AbgT+PiG/Nz9AkSYvdfmdCmbmhXfxAZj4yP8ORJC0l/dwxYUvno5AkLUkH/J1QRKwGTouI\n3cA47d8KZeaZ8zE4SdLidrALE27JzNPnZSSSpCXnYBEajojX0MyAXpaZz3Q3JEnSUnGwCL0DuJP/\nG6Ee8OOdjUiStGQcLELfzMz3z8tIJElLzsGujvv3eRmFJGlJOmCEMvPS+RqIJGnp6efvhCRJ6oQR\nkiSVMUKSpDL9vJXDIYuItcAVwASwKzO3TXvszcA3gDMyc7yL/UuSBkNXM6FNwGhmjgLnRsQwQEQc\nDWwGtne0X0nSAOkqQqsyc6Jd3gusaJd/DfgM8HxH+5UkDZBOTscB4xGxOjN3AyuBPRFxEs0b410E\nrAUuBq7Z3wYiYgQY2Wf1so7GK0kqMNTr9eZ8oxFxKs1ptz3AI8DpmTky7fHPAVcf6u+EImINsHNs\n/RiTyyfncMSSNLh6W+b+dfwQDB38S/avk5lQZj4AXHiAxz/SxX4lSYPFS7QlSWWMkCSpjBGSJJUx\nQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMk\nSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpj\nhCRJZYyQJKmMEZIklRnuYqMRsRa4ApgAdmXmtnb9x4C3AMcCf5SZf93F/iVJg6GrmdAmYDQzR4Fz\nI2Iqdvdl5kbg08BPdbRvSdKA6CpCqzJzol3eC6wAyMx7I+K1wJXA1o72LUkaEJ2cjgPGI2J1Zu4G\nVgJ74OXTdBuBTZn5zIE2EBEjwMg+q5d1MVhJUo2hXq835xuNiFOBzTTxeQQ4PTNHIuJ+4G+AF4GH\nMvNzh7jdNcDOsfVjTC6fnONRS9Jg6m2Z+9fxQzA0myd3MhPKzAeAC2dYf1oX+5MkDSYv0ZYklTFC\nkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJ\nKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQy\nRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOE\nJElljJAkqYwRkiSVMUKSpDJGSJJUZrirDUfEWuAKYALYlZnb2vWbgdXASuC6zHywqzFIkha2LmdC\nm4DRzBwFzo2I4Yg4GnhnZl4OfBIY7XD/kqQFrrOZELAqMyfa5b3ACmAZ8N123WPAiYe4zSMAhv+7\ny2FL0mDZtWtX2b7XrVu3huZs1+ThPL/LV/PxiFidmbtpTr3taff3uvbxNcCj+3tyRIwAI/usPgbg\njdvfOOeDlaRBte6udZW73wm8CfjO4Tx5qNfrzelopkTEqcBmmvg8ApyemSMRcTnwAzQzo1/PzG8f\nwjaPAu4DzgdenPtRq3UXsL56EIucx3h+eJy7dxdw5uHOhDqLUFci4h8z86zqcSxmHuPueYznh8e5\ne7M9xl6iLUkqY4QkSWWMkCSpzCBG6JbqASwBHuPueYznh8e5e7M6xgN3YYIkafEYxJmQJGmRMEKS\npDJGSJJUxghJksoMzJ1A9/fWEDp8EfFh4IPAwzQ3mT0eeInmrTY+DvxI+/j/AH+bmX9WNNSBExHH\nAlcBb8vM8yLitznAsQW+DNwE7AKOy8yNJQMfIDMc4/uAe9qH/wSYZNprBvC7NFdy7QFWARsz83vz\nPvABExFvBbYAu4EezffxnH0vD9JM6P+9NUT1gBaJ/6S5D99u4Psy8+PAZ4GLgcuAizPzV4ANZSMc\nTMPAtcBQRJzMwY/tB4C7M/MqYFdE/FjNsAfKy8e4/fwF4Bmau/WPs89rBrAOeCQzNwPbgZ+f9xEP\nph5waWZeBpzKHH8vD9IL+UxvDTFxgK/Xwd0J3JmZT0XEduDedv048HrgiMx8qV3ntfyHIDP3AkTE\nEM1PjI+1D810bGm/Zt/jrwOYdoynVv1CZo5FxJuBTwEn7POacQKv/H94DHj7PA53YGXmwwARcRnw\ndV55LZiT7+VBmgmNR8TqdnnqrSE0OwEc2S6/SPP2GtDc5fxR4IVpM84hdLjGgZPa5f0d28dm+Br1\nZygijgR+qP38WeAo4PGI+P523Wtpfmj1GB+iiFgWETcBfw98gTn+Xh6YP1bd960hMvMPioc08CLi\n7cAngH8FnqOZGR9J8xPjJpqp94dozvVuz8wvFg114ETE2cAF7ccdND89HsF+ji3wVzTn0R8HjsnM\nSwuGPVBmOMYraQJ0PPBbNC+IVzHtNSMibgaeponSxsx8rmLsgyQirgLeBTzYrhpqP+bke3lgIiRJ\nWnwG6XScJGmRMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhKQ5FBGfn4NtnBIRn51h/TsiYutsty8t\nJP6dkHQYIuJGmr8GP4fmL8kngUsy84k52PbdwEen3XJm+mO3Alsz86HZ7kdaCAbp3nHSgjH1V+AR\n8TWae5Y9236+IzPPiIgHgNuBd9Pc2fnVwNnA+4C30dyV+KlmU3nN1HYj4g3Ai5k5ERE/AYwA/wU8\nlJm/SXN36IuAK+fnv1TqlqfjpNmZuoXJlKlTC69p43IzzY00rwaeoLlf328AH8nMXwLOiogTpj3/\nTGBHu3w+cHNmbgC+1K77Fk3EpEXBCEndmLrB7vPTll+guTfficC1EXEbzY02V0973nE09zaDJlY/\n2862zmnXPQ0c2+G4pXllhKRuHOiu4/9B8z43FwG/DNw/7bGnaUIE8IPtab91wCXtuuNo3jNHWhT8\nnZA0O/u7smem9b3249PAH0fEXuD5zByZ9jU7gI+2y2+JiCtpojP1/ixnAP8020FLC4VXx0kLTER8\nGdiQmU/O8NgfAr+Tmf8y/yOT5p6n46SF5xPANfuujIizgKcNkBYTZ0KSpDLOhCRJZYyQJKmMEZIk\nlTFCkqQyRkiSVMYISZLK/C9zRLgXcDJ26QAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEJ5JREFUeJzt3X+QXXdZx/H3wpIWSVtNoNkpv0Lr8PCjtT+oQJEBS4Ay\nChGdivijmEK7GqxCN6WpWAmWIjiNUWu1gIaCA6KUzmDBwSmFTnEYVLRlpAIPHTcoIaRLk2mLCpRt\nr3+cs+2S7iY33T373Lv7fs3cydnvvfec55t793z2e+653zPS6/WQJKnCI6oLkCStXIaQJKmMISRJ\nKmMISZLKGEKSpDKGkCSpzGhXK46Io4FLgNMz86Wz2n8VeC6wCvhAZt7UVQ2SpMHW5UhoFHjHHO3n\nZOZmYDNwYYfblyQNuM5CKDP3Z+a357jr/vb+e2lGQ5KkFaqzw3GzjMzVGBFHAt87nBVFxCjwBGB3\nZk4vQm2SpEIjXU3bExHPAc5ub9cCazLzvIj4ReCFNKOgnZn52XmePw6MH9C8CjhpcuMk06vNIEnD\nr7dt6KdOm3Og0feTh2nuuIhYD+wyhCQtFys9hDxFW5JUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSV\nMYQkSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSV\nMYQkSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSV\nMYQkSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSV\nMYQkSWVGu1hpRJwCXARMAbszc0fbPgEcAxwH/HVm3tTF9iVJw6GrkdAWYCIzJ4AzI2Im7F6QmduA\nPwVe3tG2JUlDopORELAuM6fa5f3AGppR0Y0RcQ3NSOjSjrYtSRoSXY2E9kTEWLu8FtjXLp+VmecC\nZ2MISdKK19VIaDtwRUTsAz4BXA2MA/8eEZcBPwz87cFWEBHj7XNmW9VBrZKkIiO9Xq+6hr5FxHpg\n1+TGSaZXT1eXI0kL1ts2PPvgeYws5Mmeoi1JKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQy\nhpAkqYwhJEkqYwhJksoYQpKkMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQy\nhpAkqYwhJEkqYwhJksoYQpKkMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQy\nhpAkqYwhJEkqYwhJksoYQpKkMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQy\no12tOCJOAS4CpoDdmbmjbf9p4MXAo4CdmXlrVzVIkgZblyOhLcBEZk4AZ0bETOCN0wTT94A7Oty+\nJGnAdRlC6zJzql3eD6xpl58JvBPYAVza4fYlSQOuyxDaExFj7fJaYF+7/K3M7AH3AEd0uH1J0oDr\n7DMhYDtwRUTsAz4BXE1zKO6qiLimfcyfzPfkiBhvHz/bqi4KlSTVGOn1etU19C0i1gO7JjdOMr16\nurocSVqw3rbh2QfPY2QhT/YUbUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwh\nSVKZQ07bExFbgY8CZwDnAzdn5pu7LkyStPz1MxJ6emYm8Brg+cDjuy1JkrRS9BNCj4mIFwNfame/\nPrrjmiRJK0Q/IfQe4BXA2yLiDOD6bkuSJK0U/VzK4azMfEO7fAfwuQ7rkSStIP2E0FMi4grg6zMN\nmXlldyVJklaKfkLIw2+SpE7085nQ9cA64InAx4B/6rQiSdKK0U8I7QT+E3gmcD9wRacVSZJWjH5C\n6O7MvA74TmbeBdzZcU2SpBWinxA6IiIuBtZHxG8CR3ZckyRphegnhDYB3wQ+Bexvf5YkacH6OTvu\nne2/I8Ba4LSI2A9ck5l7OqtMkrTs9TVtD/A1mjPjJoHVwFdpTliQJOlh6yeEHpGZV2bmpzPzKuC+\nzLwWmOq4NknSMtfP4bixiNhOM2PCccAJEfE84NGdViZJWvb6CaGfBV4IjAFfAX6X5vOhV3dYlyRp\nBegnhD7c/jsC9IBxmrPkrgS+2FFdkqQVoJ8QmgQ+A9wGPINmVPRhmpkTXtZdaZKk5a6fEHpcZs5M\nYjoZET+TmZ+PiH1dFiZJWv76CaFeRHyEB09MGImIDcBdnVYmSVr2DhlCmbkpIk6gOTHhzszM9q5P\ndVqZJGnZm/d7QhHxvvbfW4FrgauAv4mIW5amNEnScjfvSCgzN7WLr8rM25emHEnSStLPjAnbOq9C\nkrQiHfQzoYgYA06KiL3AHtrvCmXmaUtRnCRpeTvUiQnvycyTl6QSSdKKc6gQGo2Io2hGQA/IzHu6\nK0mStFIcKoSeDfwdPxhCPeBFnVUkSVoxDhVCn8vMVyxJJZKkFedQZ8f915JUIUlakQ4aQpl5wVIV\nIklaefr5npAkSZ0whCRJZQwhSVKZfi7lcNgi4hTgImAK2J2ZO2bd96PAZ4FTM3NPF9uXJA2HrkZC\nW4CJzJwAzoyIUYCIOBLYCtzY0XYlSUOkqxBal5lT7fJ+YE27/HvA24B7O9quJGmIdHI4DtgTEWOZ\nuRdYC+yLiCfSXBjvXOAU4DzgsvlWEBHjwPgBzas6qleSVGCk1+st+koj4kSaw277gNuBkzNzfNb9\n7wUuPdzPhCJiPbBrcuMk06unF7FiSarR27b4++AlNnLoh8yvk5FQZt4GnHOQ+1/bxXYlScPFU7Ql\nSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSVMYQk\nSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSVMYQk\nSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUxhCSJJUxhCRJZQwhSVIZQ0iSVMYQkiSVMYQk\nSWUMIUlSGUNIklTGEJIklTGEJEllDCFJUhlDSJJUZrSLlUbEKcBFwBSwOzN3tO1vAJ4GHA28PzNv\n6GL7kqTh0NVIaAswkZkTwJkRMRN2X8jMzcBbgZ/qaNuSpCHRVQity8ypdnk/sAYgM2+OiMcCFwPb\nO9q2JGlIdHI4DtgTEWOZuRdYC+yDBw7TbQa2ZOY9B1tBRIwD4wc0r+qiWElSjZFer7foK42IE4Gt\nNOFzO3ByZo5HxBeBTwL3AV/OzPce5nrXA7smN04yvXp6kauWpKXX27b4++AlNrKQJ3cyEsrM24Bz\n5mg/qYvtSZKGk6doS5LKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQyhpAkqYwhJEkqYwhJksoYQpKk\nMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQyhpAkqYwhJEkqYwhJksoYQpKk\nMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQyhpAkqYwhJEkqYwhJksoYQpKk\nMoaQJKmMISRJKmMISZLKGEKSpDKGkCSpjCEkSSpjCEmSyhhCkqQyhpAkqcxoVyuOiFOAi4ApYHdm\n7mjbtwJjwFrgnZn5pa5qkCQNti5HQluAicycAM6MiNGIOBJ4XmZeCLwZmOhw+5KkAdfZSAhYl5lT\n7fJ+YA2wCvhW2/YN4LjDXOcjAUb/r8uyJWnp7N69u7qEBdmwYcN6mqNd0w/n+V3uzfdExFhm7qU5\n9Lav3d7j2vvXA1+f78kRMQ6MH9D8GIAn3fikRS9WkipsuH5DdQkLtQt4CvC1h/PkkV6vt6jVzIiI\nE4GtNOFzO3ByZo5HxIXAk2lGRpdn5lcPY51HAF8AXg7ct/hVL7nrgY3VRSwS+zKY7MtgWm59Oe3h\njoTo9XpDdXvqU5/6r9U12Bf7Miw3+zKYN/vy4M1TtCVJZQwhSVIZQ0iSVGYYQ+g91QUsIvsymOzL\nYLIvg2lBfens7DhJkg5lGEdCkqRlwhCSJJUxhCRJZQwhSVKZoZkJdL5LQwyDiHg6sA3YC/SA+9vb\nGPAm4MeAVwPfBf4xMz9UVGrfIuI64Baa6ZeGsi8RsQa4HPg2cAfwDJppptYBrwd+HnguzcS7H8jM\nm4pKPaSIOAn4DZp+HEnzuz1Ur0tEHA1cAjwrM8+KiD/kIH0APg5cDewGjsnMzSWFz2GOvrwdOIqm\nL5fTDAAe2J8Bf0xzltnM+29zZn6novYDzerL6Zn50rbtecDfZ+aPHLhv5jD7MkwjoYdcGqK6oMPQ\nAy7IzDcCJwI/lJlvAt4FnAe8ETgvM18PbCqrsk8RMQH8c/vjMPfl14A7gWmayXRvz8ytwCeBnwN+\npd2xbQYuLKuyPy8BPpiZ24AfZzhfl1HgHcBIRJzAofvwKuBjmXkJsDsifqKm7Dk90Jf25xsy87eA\nvwA2cMD+rG2bef/dSPP+GxQzfQEgIh4L/BLw+bZpQX0ZphCa69IQQyEzv5KZd0bEG4HP0FzGAmAP\n8HjgkZl5f9s20OfMR8RPAv9DE0IjDHFfgOOBmzPzd4AP8dC+3A+QmffSjIYG2XXAWyLiz2n+34fu\ndcnM/Zn5bZr31RgH7wPzPGYgzOrLzM83R8RTaEZyO3no/uxYHuzLNxjQvkTECHAZzfXgZiyoL8MU\nQnsiYqxdnrk0xFCIiFURcTXwL8AHgCe2dz2Z5i/w788a2Y3MsYpB8kqaX/5NNH/1PL9tH8a+7J21\nfAfN5UXgwb6MALQXY/zeklZ2+CaA89tRwl08tC/D9LpAEyqH+j35xhyPGTQz76GXABfQHJq6hx/c\nnz2W5lDWMPTldJrrul0IHB8Rm1hgX4bmy6oHXhoiM/+suKS+RcQlNDvrmUuZj7S3Y2mGsicCr6E5\n1n1jZl5XUefhiIgX0PTpKOBRDGFfIuLxwJU010H5Fs2O+x6aX6TNNIcRXkgzCtqZmZ8tKbQPEfEi\n4GyafozRBNEjGaLXJSKeQ9OHs4FraUZs8/YB+Aeaz4S+CTwmMy8oKHtOB/TlIzR1v7+9+3PAV2k+\nZ3lgfxYR7wbupn3/ZeZA/OEzx+vylsz8bkTckJkvnWvffDh9GZoQkiQtP8N0OE6StMwYQpKkMoaQ\nJKmMISRJKmMISZLKGEKSpDKGkLSIIuJ9i7COZ0bEu+Zof3ZEbF/o+qVB4veEpIchIq6i+Tb4GTQz\nYUzTzFhwxyKs+2PA62ZNhTL7vp3A9sz88kK3Iw2CYZoEVBoYM9/Oj4hPA78wa26tWzPz1Ii4Dfgw\n8ALgJuDRwHOAlwHPoplV/a5mVXnZzHoj4gnAfZk51U71Mg78L/DlzPwD4IPAucDFS9NTqVsejpMW\nZmYKphkzhxaOasPl3cCxmXkpzfx0Afw+8NrM/GXg9Ig4dtbzTwNubZdfDrw7MzcBH23bbqEJMWlZ\nMISkbsxMsHvvrOXv08yzdxzwjoi4BjiCZq63GcfQzLkFTVi9sh1tndG23Q0c3WHd0pIyhKRuHGym\n6v+muf7KucCvA1+cdd/dNEEEcHx72G8DcH7bdgzNJKvSsuBnQtLCzHdmz1ztvfb2VuCvImI/cG9m\njs96zK3A69rlp0XExTShc3PbdirwbwstWhoUnh0nDZiI+DiwKTPvnOO+vwT+KDP/Y+krkxafh+Ok\nwfPbNFev/AERcTpwtwGk5cSRkCSpjCMhSVIZQ0iSVMYQkiSVMYQkSWUMIUlSGUNIklTm/wEMgBKT\ndLBT7QAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x4223d90>"
+       "<matplotlib.figure.Figure at 0x61bd6d0>"
       ]
      },
      "metadata": {},
