--- a/notebooks/images-register.ipynb
+++ b/notebooks/images-register.ipynb
@@ -77,6 +77,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from mesoscope.utils import normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
@@ -421,23 +432,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def normalize(oim):\n",
-    "    # normalizes 3D image across first axis\n",
-    "    assert oim.ndim == 3\n",
-    "    \n",
-    "    means = oim.mean(axis=(1, 2), dtype='float32')\n",
-    "    maximum = means.max()\n",
-    "    return array([oim[i]*maximum/means[i] for i in range(oim.shape[0])])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {
     "collapsed": true
@@ -465,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
