--- a/notebooks/images-summary.ipynb
+++ b/notebooks/images-summary.ipynb
@@ -100,19 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def normalize(oim):\n",
-    "    # normalizes 3D image across first axis\n",
-    "    assert oim.ndim == 3\n",
-    "    \n",
-    "    means = oim.mean(axis=(1, 2), dtype='float32')\n",
-    "    maximum = means.max()\n",
-    "    return array([oim[i]*maximum/means[i] for i in range(oim.shape[0])])"
+    "from mesoscope.utils import normalize"
    ]
   },
   {
@@ -482,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
