--- a/notebooks/preprocess-behavior.ipynb
+++ b/notebooks/preprocess-behavior.ipynb
@@ -9,33 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
-    "sns.set_context('paper')\n",
-    "sns.set_style('ticks')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "from numpy import concatenate, cumsum, convolve, ones\n",
+    "from pandas import read_csv, concat\n",
     "from glob import glob\n",
-    "from os.path import join, exists\n",
-    "from shutil import copytree\n",
-    "import json"
+    "from os.path import exists"
    ]
   },
   {
@@ -47,25 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "directory = '/tier2/freeman/Nick/lfov.calibration'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "key = '2016-05-15'\n",
-    "name = 'anm-05001-L23'"
+    "directory = '/tier2/freeman/Nick/mesoscope'"
    ]
   },
   {
@@ -77,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -86,14 +57,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "/tier2/freeman/Nick/mesoscope/000012\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "path = join(directory, 'unprocessed', 'behavior', key, name)\n",
-    "print exists(path)\n",
-    "name = '5001-L23'"
+    "key = '000012'\n",
+    "path = directory + '/' + key\n",
+    "print path\n",
+    "print exists(path)"
    ]
   },
   {
@@ -105,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "files = glob(join(path, 'trial-*.csv'))\n",
+    "files = glob(path + '/behavior/trial-*.csv')\n",
     "files.sort()\n",
-    "trials = [pd.read_csv(x) for x in files]"
+    "trials = [read_csv(x) for x in files]"
    ]
   },
   {
@@ -125,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "session = pd.concat(trials)\n",
+    "session = concat(trials)\n",
     "session.reset_index(inplace=True)\n",
     "session.rename(columns={'index': 'tick'}, inplace=True)"
    ]
@@ -145,15 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "trial = session.groupby(['number']).last()\n",
-    "offsets = np.concatenate(([0],trial.time.values))\n",
-    "offsets = np.cumsum(offsets)\n",
+    "offsets = concatenate(([0],trial.time.values))\n",
+    "offsets = cumsum(offsets)\n",
     "session['allTime'] = session.time + offsets[session.number]"
    ]
   },
@@ -166,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "speed = (session.xSpeed.pow(2)+session.ySpeed.pow(2)).pow(.5)\n",
-    "session['speed'] = np.convolve(speed,np.ones(50)/50, mode='same')    "
+    "session['speed'] = convolve(speed,ones(50)/50, mode='same')    "
    ]
   },
   {
@@ -185,42 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "session.to_csv(join(path, 'session.csv'))"
+    "session.to_csv(path + '/behavior/session.csv')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Copy data to new directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "savepath = join(directory, 'reprocessed', name, key, 'behavior')\n",
-    "copytree(path,savepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
